Version 0.9.5-svn - unknown
- rename execgwcustomcmd() to playsmsd() (anton)
- change label success to handled and fail to unhandled, status on incoming SMS (anton)
- revert back kannel gateway, use fsockopen due to improper HTTP response from kannel (srosa)
- add SMS rate by prefix (anton)
- add SMS credit per user (anton)
- add playsms_web option in kannel gateway administration (emmanuel)
- fix on all php files, close unterminated variables with single-quote (anton)
- fix on all php files, replace <? with <?php (anton)
- fix wrong dlr_url when Kannel and playSMS is not on the same location (emmanuel)
- fix unable to save preferences from admin menu, manage user (anton)
- fix allow \r and \n in SMS text, http://smstools3.kekekasvi.com/topic.php?id=328 (anton)
- fix kannel gateway, bearerbox to accept hostname, not only IP (srosa)
- fix kannel gateway, missing bearerbox host and sendsms port, plugin/gateway/kannel/fn.php (anton)
- fix dlr-url misformed, plugin/gateway/kannel/fn.php (anton)
- fix RFI LFI bug, http://www.securityfocus.com/bid/33138 (anton)

Version 0.9.4 - 080713
- on themes, add loginpage.php and rename welcome.php to default.php
- remove bin/kannel_incoming.sh
- kannel can only pass MOs to playSMS using geturl method, see contrib/kannel/kannel.conf
- remove PlaySMS Web URL and Kannel Incoming Path, kannel gateway, kannel.php
- change delivery mechanism, now using file_get_contents instead of fsockopen, kannel gateway
- fix (again and again), mclass=0 for flash, mclass=1 for text to mobile, kannel gateway, fn.php
- fix delivering messages, anticipate responses from kannel latest version, kannel gateway
- fix admin auth for non multi session login
- fix user preferences unable to modify email
- change default login type to non multi session login

Version 0.9.3 - 080520
- NOTE: PHP PEAR and PEAR-DB are removed from playSMS package, please install them manually