@@ -1,7 +1,9 @@
 Version 0.9.5-svn - unknown
 - rename execgwcustomcmd() to playsmsd() (anton)
 - change label success to handled and fail to unhandled, status on incoming SMS (anton)
+- change default gateway module to smstools (anton)
 - revert back kannel gateway, use fsockopen due to improper HTTP response from kannel (srosa)
+- remove manually inserted plugins name in config.php, now load automatically (anton)
 - add SMS rate by prefix (anton)
 - add SMS credit per user (anton)
 - add playsms_web option in kannel gateway administration (emmanuel)
